
<resources>
    <string name="app_name">BooksforAll</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="rating_count">(%d)</string>
    <string name="pages_count">Halaman: %d</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="konfirmasi_password_baru">Konfirmasi Password Baru</string>
    <string name="ganti_password">Ganti Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bahasa">Bahasa</string>
    <string name="simpan_password_baru">Simpan Password Baru</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="kembali">Kembali</string>
    <string name="koleksi">Koleksi</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="simpan">Simpan</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="user_avatar">User avatar</string>
    <string name="email_example">email@example.com</string>
    <string name="ubah_profil">Ubah Profil</string>
    <string name="ubah_kata_sandi">Ubah Kata Sandi</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="search_icon">Search Icon</string>
    <string name="cari_buku_penulis_atau_genre">Cari buku, penulis, atau genre</string>
    <string name="lanjutkan_baca">Lanjutkan Baca</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile\n</string>
    <string name="logout">Logout</string>
    <string name="cover_buku">Cover Buku\n</string>
    <string name="judul_buku">Judul Buku\n</string>
    <string name="penulis_buku">Penulis Buku</string>
    <string name="edit_buku">Edit Buku\n</string>
    <string name="hapus_buku_koleksi">Hapus Buku Koleksi</string>
    <string name="title_koleksi">Koleksi</string>
    <string name="belum_ada_buku">Tidak ada buku di Koleksi</string>
    <string name="koleksi_saya">Koleksi saya</string>
    <string name="deskripsi_password_baru">Masukkan password baru Anda</string>
    <string name="Beranda">Beranda</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_main_admin">MainAdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="book_manage">Books</string>
    <string name="user_manage">Users</string>
    <string name="hapus_buku">"Hapus buku "</string>
    <string name="tambah_buku">Tambah Buku\n</string>
    <string name="tidak_ada_buku">Tidak ada buku</string>
    <string name="semua_buku">Semua Buku</string>
    <string name="hapus_pengguna">Hapus Pengguna\n</string>
    <string name="belum_ada_pengguna">Belum ada pengguna</string>
    <string name="manajemen_pengguna">Manajemen Pengguna</string>
    <string name="cari_pengguna">Cari pengguna</string>
    <string name="dekripsi_buku">Deskripsi buku</string>
    <string name="file_buku_pdf">File Buku PDF</string>
    <string name="belum_ada_file_dipilih">Belum ada file yang dipilih\n</string>
    <string name="pilih_file">Pilih File</string>
    <string name="tambahkan_cover">Tambahkan Sampul Buku</string>
    <string name="tambah">Tambah</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="dashboard">Dashboard</string>
</resources>
