<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="12dp">

        <ImageView
            android:id="@+id/userAvatar"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="12dp"
            android:src="@drawable/profile" android:contentDescription="@string/profile"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:textColor="#2D3748"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_example"
                android:textColor="#546E7A"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/userRole" android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Peran Pengguna"
                android:textColor="#546E7A"
                android:textSize="12sp"
                tools:text="Admin"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnDeleteUser"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/hapus_pengguna"
            android:src="@drawable/ic_delete" app:tint="@color/red"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>
</androidx.cardview.widget.CardView>